Complete comprehensive BurpSuite Pro MCP integration with Java 17+ features
🚀 Major Features Implemented:
- Full BurpSuite Pro tool integration (Scanner, Proxy, Repeater, Intruder, Decoder, SiteMap)
- Dual deployment modes: Standalone server + BurpSuite extension
- Java 17+ modern language features (var, switch expressions, text blocks, records)
- Gradle 8.1+ build system with advanced configurations

🔧 Scanner Tools:
- scan_target: Comprehensive security scans (passive/active/full)
- get_scan_results: Detailed vulnerability reports with remediation

🌐 Proxy Tools:
- proxy_history: HTTP traffic analysis with headers and content

🔄 Repeater Tools:
- send_to_repeater: Manual request testing and modification

⚡ Intruder Tools:
- start_intruder_attack: Automated attacks (sniper, battering ram, pitchfork, cluster bomb)

🔐 Decoder Tools:
- decode_data: Multi-format decoding (Base64, URL, HTML)
- encode_data: Multi-format encoding (Base64, URL, HTML)

🗺️ SiteMap Tools:
- get_site_map: Complete application structure discovery

ℹ️ Utility Tools:
- burp_info: Integration status and feature availability

📊 MCP Resources:
- burp://scan-queue: Real-time scan queue status
- burp://issues: Security vulnerabilities and findings
- burp://proxy-history: HTTP traffic data
- burp://site-map: Application structure

🎯 Claude Desktop Integration:
- Enhanced configuration with prompt templates
- Specialized security testing workflows
- Professional prompt templates for penetration testing

🏗️ Build System Enhancements:
- Multiple JAR outputs: standalone, BurpSuite extension, sources, javadoc
- Modern Gradle 8.1+ DSL with Java 17+ toolchain
- Comprehensive dependency management

✅ Testing: All tools tested and working via HTTP API
📝 Documentation: Updated WARP.md with comprehensive architecture details